[project]
name = "aiocachetools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=6.2.4",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
preview = true   # enables auto import sorting in ruff format

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "N", "D"]
# Optionally ignore some rules
ignore = ["D100", "ANN101", "ANN001", "D205"]  # e.g. ignore "missing docstring" and "missing type annotation for self"

[tool.ruff.lint.isort]
known-first-party = ["my_project"]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
